--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,6 +31,9 @@ jobs:
     - name: Build and publish
       run: dotnet publish -c Release -o dist
     
+    - name: Copy wwwroot contents
+      run: cp -r dist/wwwroot/* dist/ && rm -rf dist/wwwroot
+    
     - name: Setup Pages
       uses: actions/configure-pages@v4
     
