--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,6 +34,9 @@ jobs:
     - name: Copy wwwroot contents
       run: cp -r dist/wwwroot/* dist/ && rm -rf dist/wwwroot
     
+    - name: List dist contents
+      run: ls -la dist/
+    
     - name: Setup Pages
       uses: actions/configure-pages@v4
     
