--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,6 +37,9 @@ jobs:
           cp -r dist/wwwroot/* dist/
           rm -rf dist/wwwroot
         fi
+    
+    - name: Copy 404.html to root
+      run: cp wwwroot/404.html dist/404.html
 
     - name: List dist contents
       run: ls -la dist/
